# opentreesearch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  treesearch-run.py
configs/: tree_search_examples.yaml
examples/circle_packing/: config.yaml  evaluator.py  initial_program.py
examples/function_minimization/: config-treesearch.yaml  config.yaml  evaluator.py  initial_program.py  tree_search_view.html
notebooks/: plotting.ipynb
openevolve/: config.py  evolution_trace.py
openevolve/tree_search/: README.md  cli.py  tree_controller.py  tree_database.py  tree_process_parallel.py
opentreesearch/: __init__.py  cli.py  tree_controller.py  tree_database.py  tree_process_parallel.py
tests/: test_config.py  test_tree_database.py
tools/: generate_program_summaries.py  generate_tree_search_view.py  tree_search_view_template.html
