[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opentreesearch"
version = "0.1.0"
description = "Tree search for LLM-guided code evolution, built on OpenEvolve"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "openevolve @ git+https://github.com/algorithmicsuperintelligence/openevolve@v0.2.18",
    "scipy>=1.10.0",
    "matplotlib>=3.5.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.7.0",
    "pre-commit>=4.2.0",
]

[project.scripts]
treesearch-run = "opentreesearch.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "D",    # pydocstyle
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["E501"]  # ignore long error message strings

[tool.setuptools.packages.find]
include = ["opentreesearch*"]
